show notification bar if page looks unsourced

--- a/data/popup.html
+++ b/data/popup.html
@@ -76,10 +76,10 @@
 
 <!-- template when we have no details about the article -->
 <script id="popup-no-details-tmpl" type="text/x-jquery-tmpl">
-  <p>Sorry, no more information about this article. Think it is missing some sources or warning labels?<br/>
+  <p>Sorry, no more information about this article. Think it might be missing sources or warning labels?<br/>
     <br/>
     <br/>
-  <a target="_blank" class="btn btn-major" href="{{submit_url}}">Add sources</a>
+  <a target="_blank" class="btn btn-major" href="{{submit_url}}">Add them</a>
   </p>
 </script>
 
