--- a/data/popup.html
+++ b/data/popup.html
@@ -22,6 +22,7 @@
 <!-- template for when we have data about the article -->
 <script id="popup-details-tmpl" type="text/x-jquery-tmpl">
 
+  {% if sources.length>0 %}
     <h3>Sources</h3>
     <ul class="srclist">
     {%for src in sources%}
@@ -45,33 +46,33 @@
         {% endif %}
         </div>
       </li>
-    {% else %}
-      <li><em>None</em></li>
     {% endfor %}
     </ul>
+  {% else %}
+    <h3>No Sources</h3>
+  {% endif %}
 
     {% if needs_sourcing %}
     <em>This article is still missing some sources.</em>
-    (<a target="_blank" href="{{unsourced_url}}">Add one</a>)
+    <a target="_blank" class="btn" href="{{unsourced_url}}">Source it</a>
     {% endif %}
 
+    {% if labels.length>0 %}
     <h3>Warning Labels</h3>
     {% for label in labels %}    
 <div class="label">
 <img class="label-icon" src="{{label.icon_url}}"/><div class="label-bod"><div class="label-head">WARNING</div>{{label.description}}</div>
 </div>
-    {% else %}
-    <div><em>none</em> (<a target="_blank" href="{{unsourced_url}}">Add one</a>)</div>
     {% endfor %}
-
-    <br/>
-    <br/>
-
-    {% if needs_sourcing %}
-    <a target="_blank" class="btn btn-major" href="{{unsourced_url}}">Add sources</a>
     {% else %}
-    <a target="_blank" class="btn" href="{{unsourced_url}}">View at unsourced.org</a>
+    <h3>No Warning Labels</h3>
+    <div><a target="_blank" class="btn" href="{{unsourced_url}}">Add one</a></div>
     {% endif %}
+
+    <br/>
+    <br/>
+
+    <small><a target="_blank" href="{{unsourced_url}}">More information about this article</a> (at unsourced.org)</small>
 </script>
 
 <!-- template when we have no details about the article -->
@@ -79,7 +80,16 @@
   <p>Sorry, no more information about this article. Think it might be missing sources or warning labels?<br/>
     <br/>
     <br/>
-  <a target="_blank" class="btn btn-major" href="{{submit_url}}">Add them</a>
+  <a target="_blank" class="btn" href="{{submit_url}}">Source it</a>
+  </p>
+</script>
+
+<!-- template when we think there are sources missing from the article -->
+<script id="popup-sources-missing-tmpl" type="text/x-jquery-tmpl">
+  <p>It looks like there might be sources missing from this article...<br/>
+    <br/>
+    <br/>
+  <a target="_blank" class="btn" href="{{submit_url}}">Source it</a>
   </p>
 </script>
 
