add server address to options editing

--- a/data/options.html
+++ b/data/options.html
@@ -49,7 +49,10 @@
       <input type="checkbox" id="debug" name="debug" />
       <label for="debug">Show debug info in popup window?</label>
     </div>
-
+    <div>
+      <input type="text" id="server-addr" name="server-addr" />
+      <label for="server-addr">Address of server</label>
+    </div>
 
     <div class="options-form-buttons">
     <input type="submit" id="save" name="save" value="Save changes" />
